# clang-degrader

./: CMakeLists.txt  ClangDegrader.cpp  LICENSE  Makefile  README.md  SampleDegrader.cpp
DegraderBase/: DegraderBase.cpp  DegraderBase.hpp
NullptrDegrade/: NullptrDegrader.cpp  NullptrDegrader.hpp
Tool/: CMakeLists.txt  ClangDegrader.cpp  SampleDegrader.cpp
sample/: sample.cpp  sample.hpp
